--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-<h1>Hello</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>zuhdannur.github.io</title>
+    <link rel="stylesheet" href="./public/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+</head>
+<body>
+    <nav class="navbanavbar navbar-expand-lg navbar-light bg-light">
+        <div class="container p-2">
+            <a class="navbar-brand" href="https://id.linkedin.com/in/zuhdan-nur-ihsan-iskandar">
+                <i class="bi bi-linkedin"></i>
+            </a>
+
+            <a class="navbar-brand" href="https://github.com/Zuhdannur">
+                <i class="bi bi-github"></i>
+            </a>
+        </div>
+    </nav>
+    <div class="container">
+        
+    </div>
+</body>
+</html>
+
+<script src="./public/js/bootstrap.bundle.min.js"></script>
+<script>
+    
+</script>
