--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>zuhdannur.github.io</title>
     <link rel="stylesheet" href="./public/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./public/css/styles.css">
 </head>
-<body>
-    <nav class="navbanavbar navbar-expand-lg navbar-light bg-light">
-        <div class="container p-2">
+<body class="color-primary">
+    <nav class="navbarnavbar navbar-expand-lg navbar-light bg-light color-primary">
+        <div class="container p-3">
             <a class="navbar-brand" href="https://id.linkedin.com/in/zuhdan-nur-ihsan-iskandar">
                 <i class="bi bi-linkedin"></i>
             </a>
@@ -21,7 +22,10 @@
         </div>
     </nav>
     <div class="container">
-        
+        <div class="px-4 py-5 my-5">
+        <h3 class="display-5 myTitle"> Hello my name is Zuhdan</h3>
+            <h4 class="display-6 fw-bold text-white">I'm Web & Android developer </h1>
+        </div>
     </div>
 </body>
 </html>
